deployment/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "test-cluster-lb.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http-path
spec:
  hosts:
    - "test-cluster-lb.com"
  gateways:
    - api-gateway
  http:
    - match:
        - uri:
            prefix: "/api-service/"
      rewrite:
        uri: "/"
      timeout: 2s
      route:
        - destination:
            host: api-service
            port:
              number: 80
      corsPolicy:
        allowOrigin:
          - "*"
        allowMethods:
          - POST
          - GET
          - OPTIONS
          - PUT
          - DELETE
        allowCredentials: true
        allowHeaders:
          - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: upstream-service
spec:
  hosts:
    - upstream-service
  http:
    - route:
        - destination:
            host: upstream-service
            port:
              number: 80
      retries:
        attempts: 0
